master Update tabs / charts / validation

--- a/src/scss/sections/_our-clients.scss
+++ b/src/scss/sections/_our-clients.scss
@@ -17,8 +17,11 @@
   background-color: $brand-secondary-color;
   .carousel-client-feedback {
     .item {
-      max-width: 515px;
       margin: 0 auto;
+      blockquote {
+        max-width: 515px;
+        margin: 0 auto;
+      }
     }
   }
 }
