--- a/src/scss/sections/_team.scss
+++ b/src/scss/sections/_team.scss
@@ -21,6 +21,11 @@
     text-transform: uppercase;
     box-shadow: 0 3px 0 0 rgba(223,228,229,1);
     cursor: pointer;
+    &.active {
+      .angle-up {
+        display: block;
+      }
+    }
     .angle-up {
       position: absolute;
       width: 0;
@@ -31,6 +36,7 @@
       border-bottom: 25px solid $dark-grey-color;
       border-left: 25px solid transparent;
       border-right: 25px solid transparent;
+      display: none;
     }
     .team-member-img-holder {
       width: 100%;
@@ -58,6 +64,7 @@
 .team-member-info-container {
   padding: 65px 15px 45px;
   background-color: $dark-grey-color;
+  display: none;
   .team-member-info {
     position: relative;
     max-width: 770px;
@@ -118,5 +125,29 @@
   }
   .description {
     margin: 24px auto 55px;
+  }
+  .skills-charts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: $brand-primary-color;
+    text-transform: uppercase;
+    margin-bottom: -40px;
+    .chart-container {
+      text-align: center;
+      margin: 0 10px 40px;
+    }
+    .chart {
+      position: relative;
+      margin-bottom: 22px;
+      .chart-value {
+        position: absolute;
+        height: 40px;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-20px);
+        font-size: 35px;
+      }
+    }
   }
 }
