--- a/src/scss/sections/_contact-us.scss
+++ b/src/scss/sections/_contact-us.scss
@@ -64,6 +64,17 @@
   }
 }
 
+.form-row-fields {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.textarea-row {
+  margin: 30px 0;
+  //padding: 0;
+}
+
 .field-control-general {
   position: absolute;
   top: 0;
@@ -80,6 +91,10 @@
     margin-left: 5px;
     color: rgb(247, 86, 86);
   }
+}
+
+label.error {
+  color: rgb(247, 86, 86);
 }
 
 .form-field {
@@ -121,7 +136,6 @@
 .message-field {
   width: 100%;
   height: 220px;
-  margin: 30px 0;
   resize: none;
 }
 
