--- a/src/scss/sections/_media.scss
+++ b/src/scss/sections/_media.scss
@@ -112,6 +112,9 @@
 
 @media screen and (max-width: 991px) {
   //general
+  .title {
+    font-size: 24px;
+  }
   .services-section,
   .work-flow-section,
   .portfolio-achievements,
@@ -127,7 +130,8 @@
   .client-info-container .client-logo-list {
     margin-top: 30px;
   }
-  .portfolio-feedback .description {
+  .portfolio-feedback .description,
+  .skills-container .description {
     margin-bottom: 30px;
   }
   .portfolio-section,
@@ -195,7 +199,7 @@
   //end portfolio-section
   //contact-us
   .form-field-control {
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     &:last-child {
       margin-top: 0;
     }
@@ -298,7 +302,16 @@
   .achievement-item {
     padding: 0;
   }
-  //portfolio-section
+  //team-section
+  .skills-container {
+    .skills-charts {
+      .chart-container {
+        width: 50%;
+        margin-left: 0;
+        margin-right: 0;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 560px) {
@@ -327,7 +340,7 @@
       margin-top: 0;
     }
   }
-  .message-field {
+  .textarea-row {
     margin: 15px 0;
   }
   .field-control-general {
@@ -368,4 +381,13 @@
     margin: 0 0 30px;
   }
   //end client-section
+
+  //team-section
+  .skills-container {
+    .skills-charts {
+      .chart-container {
+        width: 100%;
+      }
+    }
+  }
 }
