--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -40,10 +40,9 @@
 
 .portfolio-information {
   .portfolio-caption {
-    display: block;
     font-size: 25px;
     text-transform: capitalize;
-    margin-bottom: 23px;
+    margin: 0 0 23px;
   }
   .description {
     text-align: left;
