--- a/src/scss/sections/_team.scss
+++ b/src/scss/sections/_team.scss
@@ -73,6 +73,7 @@
       font-size: 20px;
       text-transform: uppercase;
       color: $brand-primary-color;
+      margin: 0;
     }
     .description {
       text-align: left;
